--- a/templates/widgets/home/components/V2.html
+++ b/templates/widgets/home/components/V2.html
@@ -27,7 +27,7 @@
         </tr>
         <tr>
           <td colspan="2" class="text-center">Estado</td>
-          <td colspan="1" id="v2_vel_aire_min" class="text-center"></td>
+          <td colspan="1" id="v2_estado" class="text-center"></td>
          
         </tr>
         <tr>
