--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,16 @@
   <main role="main" class="container ">
     {% block navbar_section %}
     {% endblock %}
-    
+    {% if messages %}
+      <div class="mt-3">
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
     {% block body_content %}{% endblock %}
   </main>
 
