--- a/templates/widgets/home/components/Header.html
+++ b/templates/widgets/home/components/Header.html
@@ -47,11 +47,11 @@
             </table>
         </div>
     </div>
-    <h3>Datos promediados VDF (10 mins)</h3>
+    <h3>Datos promediados VDF (10 min)</h3>
     <div class="row" id="vdf">
 
     </div>
-    <h3>Datos promediados del sensor (10 mins)</h3>
+    <h3>Datos promediados del sensor (10 min)</h3>
     <div class="row" id="sensor">
 
     </div>
