--- a/templates/widgets/home/components/V1.html
+++ b/templates/widgets/home/components/V1.html
@@ -1,5 +1,4 @@
-<div class="row align-items-center my-4">
-
+<div class="row align-items-start my-4">
   <!-- Estado y Fórmula -->
   <div class="col-md-5">
     <table class="table table-bordered">
@@ -8,9 +7,9 @@
           <th colspan="4">Caudal en la frente</th>
         </tr>
       </thead>
+      
       <tbody>
         <tr>
-          <!-- Número "1" como parte de la tabla -->
           <td rowspan="3" class="align-middle text-center" style="width: 100px;">
             <h1 class="display-1 fw-bold m-0">1</h1>
           </td>
@@ -33,6 +32,7 @@
       </tbody>
     </table>
   </div>
+
   <!-- Requerimientos de Caudal -->
   <div class="col-md-3">
     <table class="table table-bordered">
@@ -45,7 +45,7 @@
       </thead>
       <tbody>
         <tr>
-          <td class="text-center " id="v1_Q2">{{ caudal_de_frente.q_frente }}</td>
+          <td class="text-center" id="v1_Q2">{{ caudal_de_frente.q_frente }}</td>
           <td class="text-center" id="v1_lf">{{ caudal_de_frente.q_requerido }}</td>
           <td class="text-center" id="v1_pt2">{{ caudal_de_frente.q_requerido }}</td>
         </tr>
@@ -54,7 +54,7 @@
   </div>
 
   <!-- Semáforo -->
-  <div class="col-md-3">
+  <div class="col-md-4">
     <table class="table table-bordered">
       <thead class="bg-secondary text-white text-center">
         <tr>
@@ -75,3 +75,4 @@
     </table>
   </div>
 </div>
+<hr/>
