--- a/templates/widgets/home/components/V3.html
+++ b/templates/widgets/home/components/V3.html
@@ -1,4 +1,4 @@
-<div class="row align-items-center my-4">
+<div class="row align-items-start my-4">
 
   <!-- Estado y Fórmula -->
   <div class="col-md-4">
@@ -10,7 +10,6 @@
       </thead>
       <tbody>
         <tr>
-          <!-- Número "3" como parte de la tabla -->
           <td rowspan="4" class="align-middle text-center" style="width: 100px;">
             <h1 class="display-1 fw-bold m-0">3</h1>
           </td>
@@ -18,11 +17,10 @@
           <td class="text-center" id='v3_estado' style="background-color: {% if tgbh.estado == 1 %}#d4edda{% else %}#f8d7da{% endif %};">
             {{ tgbh.estado }}
           </td>
-          <td rowspan="4"  class="text-center align-middle font-italic fw-bold" style="font-size: 1.2rem;">
+          <td rowspan="4" class="text-center align-middle font-italic fw-bold" style="font-size: 1.2rem;">
             TGBH = <br />
             0.7 * t° bulbo húmedo + <br />
             0.3 * t° bulbo seco
-
           </td>
         </tr>
         <tr>
@@ -35,14 +33,14 @@
         </tr>
         <tr>
           <td>TGBH frente</td>
-          <td colspan="1"  class="text-center" id="v3_tgbh">{{ tgbh.tgbh_frente }}</td>
+          <td class="text-center" id="v3_tgbh">{{ tgbh.tgbh_frente }}</td>
         </tr>
       </tbody>
     </table>
   </div>
 
   <!-- Niveles de Carga de Trabajo -->
-  <div class="col-md-4">
+  <div class="col-md-5">
     <table class="table table-bordered">
       <thead class="thead-light bg-secondary text-white text-center">
         <tr>
@@ -100,17 +98,14 @@
           <td>T° b. seco</td>
           <td class="text-center" id="v3_tbs">{{ tgbh.temp_bulbo_seco }}</td>
         </tr>
-        
         <tr>
           <td>Nivel de carga</td>
-          <td class="text-center" id="v3_nivel_carga">{{ tgbh.temp_bulbo_seco }}</td>
+          <td class="text-center" id="v3_nivel_carga">{{ tgbh.nivel_carga }}</td>
         </tr>
-
         <tr>
           <td rowspan="2">Semáforo</td>
-          <td class="text-center" style="background-color: green; color:white;">
+          <td class="text-center" style="background-color: green; color: white;">
             TGBH dentro del Rango de T°
-            
           </td>
         </tr>
         <tr>
@@ -121,5 +116,5 @@
       </tbody>
     </table>
   </div>
-
 </div>
+<hr/>
