--- a/templates/widgets/home/components/V4.html
+++ b/templates/widgets/home/components/V4.html
@@ -1,4 +1,4 @@
-<div class="row align-items-center my-4">
+<div class="row align-items-start my-4">
 
   <!-- Información Principal -->
   <div class="col-md-6">
@@ -10,7 +10,6 @@
       </thead>
       <tbody>
         <tr>
-          <!-- Número "4" como parte de la tabla -->
           <td rowspan="3" class="align-middle text-center" style="width: 100px;">
             <h1 class="display-1 fw-bold m-0">4</h1>
           </td>
@@ -19,7 +18,7 @@
             {{ lc.estado }}
           </td>
           <td rowspan="3" class="text-center align-middle font-italic fw-bold" id="v4_formula" style="font-size: 1.2rem;">
-            El Lc se encuentra operando dentro de los rangos admitidos. 
+            El Lc se encuentra operando dentro de los rangos admitidos.
           </td>
         </tr>
         <tr>
@@ -27,9 +26,8 @@
           <td class="text-center" id="v4_lc">{{ lc.valor }}</td>
         </tr>
         <tr>
-          <td colspan="2" >
+          <td colspan="2">
             <div class="text-start" id="v4_values">
-             
             </div>
           </td>
         </tr>
@@ -38,7 +36,7 @@
   </div>
 
   <!-- Semáforo -->
-  <div class="col-md-3">
+  <div class="col-md-6">
     <table class="table table-bordered">
       <thead class="bg-secondary text-white text-center">
         <tr>
@@ -47,17 +45,17 @@
       </thead>
       <tbody>
         <tr>
-          <td class="text-center" id="" style="background-color: green;color:white;">
+          <td class="text-center" style="background-color: green; color: white;">
             Lc < 0.5
           </td>
         </tr>
         <tr>
-          <td class="text-center" style="background-color: yellow; color:black">
-            0.5< Lc < 1
+          <td class="text-center" style="background-color: yellow; color: black;">
+            0.5 < Lc < 1
           </td>
         </tr>
         <tr>
-          <td class="text-center" style="background-color: red;color: white;">
+          <td class="text-center" style="background-color: red; color: white;">
             Lc > 1
           </td>
         </tr>
@@ -66,3 +64,4 @@
   </div>
 
 </div>
+<hr/>
