--- a/templates/widgets/home/components/V5.html
+++ b/templates/widgets/home/components/V5.html
@@ -1,4 +1,4 @@
-<div class="row align-items-center my-4">
+<div class="row align-items-start my-4">
 
   <!-- Información Principal -->
   <div class="col-md-6">
@@ -10,7 +10,6 @@
       </thead>
       <tbody>
         <tr>
-          <!-- Número "5" como parte de la tabla -->
           <td rowspan="4" class="align-middle text-center" style="width: 100px;">
             <h1 class="display-1 fw-bold m-0">5</h1>
           </td>
@@ -19,7 +18,7 @@
             {{ punto_stall.estado }}
           </td>
           <td rowspan="4" id="v5_formula" class="text-center align-middle font-italic fw-bold" style="font-size: 1.2rem;">
-            El punto de STALL, que corresponde al punto de operación del ventilador en donde este deja de funcionar, se calcula teniendo la CURVA DEL VENTILADOR. Corresponde al punto máximo de presión total del ventilador.
+            El punto de STALL, que corresponde al punto de operación del ventilador donde no debe operar, se calcula teniendo la curva del ventilador. Corresponde al punto máximo de presión total del ventilador.
           </td>
         </tr>
         <tr>
@@ -41,7 +40,7 @@
   <!-- Rango de Operación -->
   <div class="col-md-3">
     <table class="table table-bordered">
-      <thead class="thead-light bg-secondary text-white text-center">
+      <thead class="bg-secondary text-white text-center">
         <tr>
           <th colspan="2">Rango de Operación</th>
         </tr>
@@ -69,12 +68,12 @@
       </thead>
       <tbody>
         <tr>
-          <td class="text-center" id="" style="background-color: green; color: white;"> 
+          <td class="text-center" style="background-color: green; color: white;"> 
             90% < Pto Stall
           </td>
         </tr>
         <tr>
-          <td class="text-center" id="" style="background-color: red; color: white;"> 
+          <td class="text-center" style="background-color: red; color: white;"> 
             Pto stall > 90%
           </td>
         </tr>
@@ -82,3 +81,4 @@
     </table>
   </div>
 </div>
+<hr/>
