actualizaciones en descripcion del proyecto y form

--- a/templates/widgets/currentStatus/current_data.html
+++ b/templates/widgets/currentStatus/current_data.html
@@ -1,6 +1,6 @@
 <div class="row py-4 d-flex justify-content-evenly align-items-center">
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col  border-end border-3 border-success">Presión total ventilador (pa)</div>
+      <div class="col  border-end border-3 border-success">Presión total ventilador (Pa)</div>
       <div class="col  text-center m-auto" id="pt1"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
@@ -16,19 +16,19 @@
       <div class="col text-center m-auto" id="qf"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Presión Estática ventilador  (pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Presión estática ventilador  (Pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pe"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Presión dinámica ventilador (pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Presión dinámica ventilador (Pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pd"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Pérdida de choque de sistema (pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Pérdida de choque de sistema (Pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pch"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Pérdidas fricionales de sistema (pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Pérdidas fricionales de sistema (Pa) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pf"></div>
    </div>
 </div>
