--- a/templates/widgets/home/components/Header.html
+++ b/templates/widgets/home/components/Header.html
@@ -11,13 +11,13 @@
                         <th>Ducto</th>
                         <th>Codos</th>
                         <th>Caudal Requerido</th>
-                        <th>Ancho Galería</th>
-                        <th>Alto Galería</th>
-                        <th>Área Galería</th>
+                        <th>Ancho Galería (m)</th>
+                        <th>Alto Galería (m)</th>
+                        <th>Área Galería (m²)</th>
                         <th>Nivel Carga</th>
                         <th>Tipo Trabajo</th>
-                        <th>Factor</th>
-                        <th>Potencia</th>
+                        <th>Factor (%)</th>
+                        <th>Potencia (%)</th>
                         <th>Dis E Sens</th>
                         <th>LF</th>
                         <th>Sistema de Partida</th>
