--- a/templates/widgets/home/components/V6.html
+++ b/templates/widgets/home/components/V6.html
@@ -41,11 +41,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Presión total inicial medida</td>
+                        <td>Presión total inicial medida (Pa)</td>
                         <td class="text-center" id="v6_presion_hace30m">{{ fugas.presion_inicial }}</td>
                     </tr>
                     <tr>
-                        <td>Presión total final medida</td>
+                        <td>Presión total final medida (Pa)</td>
                         <td class="text-center" id="v6_presion_actual">{{ fugas.presion_final }}</td>
                     </tr>
                     <tr>
