--- a/templates/widgets/dbs/navbar.html
+++ b/templates/widgets/dbs/navbar.html
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col">
-        <a href="{% url 'dbs:dbs' %}?type=ventilador" class="btn {% if request.GET.type == 'ventilador' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2">+ Ventilador</a>
-        <a href="{% url 'dbs:dbs' %}?type=curva_diseno" class="btn {% if request.GET.type == 'curva_diseno' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Curva Diseño</a>
-        <a href="{% url 'dbs:dbs' %}?type=ducto" class="btn {% if request.GET.type == 'ducto' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Ducto</a>
-        <a href="{% url 'dbs:dbs' %}?type=equip_diesel" class="btn {% if request.GET.type == 'equip_diesel' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Equipamiento Diesel</a>
-        <a href="{% url 'dbs:create-caracteristica' %}" class="btn {% if 'create-caracteristica' in request.path %} btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Accesorio del ventilador</a>
-        <a href="{% url 'dbs:crear-sistema-partida' %}" class="btn {% if 'crear-sistema-partida' in request.path %} btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Sistema de partida</a>
+        <a href="{% url 'dbs:dbs' %}?type=ventilador" class="btn {% if request.GET.type == 'ventilador' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2"> Ventilador</a>
+        <a href="{% url 'dbs:dbs' %}?type=curva_diseno" class="btn {% if request.GET.type == 'curva_diseno' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1"> Curva Diseño</a>
+        <a href="{% url 'dbs:dbs' %}?type=ducto" class="btn {% if request.GET.type == 'ducto' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1"> Ducto</a>
+        <a href="{% url 'dbs:dbs' %}?type=equip_diesel" class="btn {% if request.GET.type == 'equip_diesel' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1"> Equipamiento Diesel</a>
+        <a href="{% url 'dbs:create-caracteristica' %}" class="btn {% if 'create-caracteristica' in request.path %} btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1"> Accesorio del ventilador</a>
+        <a href="{% url 'dbs:crear-sistema-partida' %}" class="btn {% if 'crear-sistema-partida' in request.path %} btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1"> Sistema de partida</a>
+        <a href="{% url 'dbs:crear-tipo-equipamiento-diesel' %}" class="btn {% if 'crear-tipo-equipamiento-diesel' in request.path %} btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1"> Tipo de equipamiento diesel</a>
     </div>
 </div>
